# nifty-gains-loader

./: .gitignore  README.md  alpha.py  analysis.py  candlesticks.py  holidays.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-stock-check.yml
data/: nifty50.txt  nifty500.txt
secrets/: decrypt_secret.sh  firestore-access.json.gpg
