[tool.poetry]
name = "nifty-gains-loader"
version = "0.1.0"
description = ""
authors = ["Srujan Deshpande <srujan.deshpande@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
